fix surname wrapping on smaller screens

--- a/site/pages/meet-our-team/team-slice/badger-profile/style.css
+++ b/site/pages/meet-our-team/team-slice/badger-profile/style.css
@@ -66,6 +66,11 @@
 .arrow svg {
   position: relative;
   top: 5px;
-  left: 10px;
   height: 20px;
+  padding-left: 10px;
 }
+
+.lastName {
+  display: inline-block;
+}
+
